@startuml
abstract class Animal {
+ {abstract}void makeSound()
+ {abstract}void eat()
}

class Dog {
+ void makeSound()
+ void eat()
+ void run()
}

class Bird {
+ void makeSound()
+ void eat()
+ void fly()
}

class Cat {
+ void makeSound()
+ void eat()
+ void run()
}

class Main {
+ {static} void main(String[])
}

interface Flyable {
+ void fly()
}

interface Runnable {
+ void run()
}



Runnable <|.. Dog
Animal <|-- Dog
Flyable <|.. Bird
Animal <|-- Bird
Runnable <|.. Cat
Animal <|-- Cat
@enduml